feat: Aiport data import